src/app.css
@import 'tailwindcss';
@import url('/assets/inter.css');

@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

@plugin 'flowbite/plugin';

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --color-primary-50: #fff5f2;
  --color-primary-100: #fff1ee;
  --color-primary-200: #ffe4de;
  --color-primary-300: #ffd5cc;
  --color-primary-400: #ffbcad;
  --color-primary-500: #fe795d;
  --color-primary-600: #ef562f;
  --color-primary-700: #eb4f27;
  --color-primary-800: #cc4522;
  --color-primary-900: #a5371b;

  --color-secondary-50: #f0f9ff;
  --color-secondary-100: #e0f2fe;
  --color-secondary-200: #bae6fd;
  --color-secondary-300: #7dd3fc;
  --color-secondary-400: #38bdf8;
  --color-secondary-500: #0ea5e9;
  --color-secondary-600: #0284c7;
  --color-secondary-700: #0369a1;
  --color-secondary-800: #075985;
  --color-secondary-900: #0c4a6e;
}

@source "../node_modules/flowbite-svelte/dist";
@source "../node_modules/flowbite-svelte-icons/dist";

@layer base {
  /* disable chrome cancel button */
  input[type="search"]::-webkit-search-cancel-button {
    display: none;
  }
}

/* product info styling */
:root {
    --unavailable-color: #f44336;  
    --sold-out-color: #e91e63;     
    --po-open-color: #4caf50;      
    --ots-open-color: #2196f3;    
}
.prod-chip {
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 4px;
    color: white;
    padding: 2px 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 12px;
    margin: 4px 4px;
    cursor: default;
    width: fit-content;
    border-radius: 12px;
}
.prose {
	p {
    margin-top: 40px;
    color: #000;
    text-align: justify;
    font-family: "Inter";
    font-size: 20px;
    font-style: normal;
    font-weight: 300;
    line-height: 100%; /* 18px */
    letter-spacing: -0.6px;
	}

	h1, h2, h3, h4, h5, h6 {
		margin-top: var(--size-8);
		margin-bottom: var(--size-3);
    color: #000;
    text-align: left;
    font-family: "Inter";
    font-size: 33px;
    font-style: normal;
    font-weight: 400;
    line-height: 90%; /* 18px */
    letter-spacing: -0.6px;
	}

	ul {
		list-style-type:circle;
		padding-left: var(--size-5);
	}

  ol {
		list-style-type:decimal;
		padding-left: var(--size-5);
	}

	ul li, ol li {
		margin-block: var(--size-2);
		padding-inline-start: var(--size-2);
	}

	pre {
		max-inline-size: 100%;
		padding: var(--size-3);
		border-radius: 8px;
		tab-size: 2;
	}
}

